# piranha

./: .gitignore
.github/workflows/: rust.yml
demo/: match_only_demos.py
demo/match_only/go/: sample.go
demo/match_only/go/configurations/: rules.toml
polyglot/piranha/: Cargo.toml
polyglot/piranha/crates/dsl/: Cargo.toml
polyglot/piranha/crates/dsl/src/: constraint.rs  lib.rs  outgoing_edges.rs  rule.rs  rule_graph.rs  scopes.rs
polyglot/piranha/crates/dsl/src/dsl_tests/: mod.rs  rule_test.rs
polyglot/piranha/crates/models/: Cargo.toml
polyglot/piranha/crates/models/src/: config.rs  constraint.rs  edit.rs  lib.rs  piranha_arguments.rs  piranha_output.rs  rule.rs  rule_graph.rs  rule_store.rs  scopes.rs  source_code_unit.rs
polyglot/piranha/crates/models/src/models_tests/: mod.rs  scopes_test.rs  source_code_unit_test.rs
polyglot/piranha/crates/piranha/src/: lib.rs  main.rs
polyglot/piranha/crates/piranha_utilities/: Cargo.toml
polyglot/piranha/crates/piranha_utilities/src/: lib.rs  utils_tests.rs
polyglot/piranha/crates/tree_sitter_wrapper/: Cargo.toml
polyglot/piranha/crates/tree_sitter_wrapper/src/: lib.rs  matches.rs  ts_wrapper_tests.rs
polyglot/piranha/demo/: find_replace_custom_cleanup_demos.py  find_replace_demos.py  match_only_demos.py  stale_feature_flag_cleanup_demos.py
polyglot/piranha/demo/java/: scratch.py
polyglot/piranha/e2e_tests/: mod.rs
polyglot/piranha/piranha_models/: Cargo.toml
polyglot/piranha/piranha_models/src/: config.rs  constraint.rs  edit.rs  lib.rs  piranha_arguments.rs  piranha_output.rs  rule.rs  rule_graph.rs  rule_store.rs  scopes.rs  source_code_unit.rs
polyglot/piranha/piranha_models/src/tests/: rule_test.rs  scopes_test.rs  source_code_unit_test.rs
polyglot/piranha/piranha_utilities/: Cargo.toml
polyglot/piranha/piranha_utilities/src/: lib.rs  tests.rs
polyglot/piranha/src/: config.rs  lib.rs  main.rs  piranha.rs
polyglot/piranha/src/cleanup_rules/go/: edges.toml  rules.toml
polyglot/piranha/src/cleanup_rules/java/: rules.toml
polyglot/piranha/src/crates/core/: Cargo.toml
polyglot/piranha/src/crates/dsl/: Cargo.toml
polyglot/piranha/src/crates/dsl/src/: constraint.rs  lib.rs  rule.rs  scopes.rs
polyglot/piranha/src/crates/tree_sitter_wrapper/: Cargo.toml
polyglot/piranha/src/dsl/: Cargo.toml
polyglot/piranha/src/dsl/src/: constraint_toml.rs  lib.rs  outgoing_edges_toml.rs  piranha_config_toml.rs  rule_toml.rs  scopes_toml.rs
polyglot/piranha/src/models/: constraint.rs  default_configs.rs  edit.rs  matches.rs  mod.rs  outgoing_edges.rs  piranha_arguments.rs  piranha_config.rs  piranha_input.rs  piranha_output.rs  piranha_rule.rs  rule.rs  rule_store.rs  scopes.rs  source_code_unit.rs
polyglot/piranha/src/models/unit_tests/: rule_test.rs  source_code_unit_test.rs
polyglot/piranha/src/tests/: mod.rs  test_piranha_go.rs  test_piranha_java.rs  test_piranha_kt.rs  test_piranha_strings.rs  test_piranha_swift.rs
polyglot/piranha/src/utilities/: tree_sitter_utilities.rs
polyglot/piranha/src/utilities/unit_tests/: tree_sitter_utilities_test.rs
polyglot/piranha/tree_sitter_utils/: Cargo.toml
polyglot/piranha/tree_sitter_utils/src/: lib.rs  tests.rs
src/cleanup_rules/swift/: rules.toml
src/tests/: test_piranha_swift.rs
test-resources/swift/cleanup_rules/configurations/: rules.toml
test-resources/swift/cleanup_rules/expected/: SampleClass.swift
test-resources/swift/cleanup_rules/input/: SampleClass.swift
(+18 files in other folders)
