[package]
authors = ["Ameya Ketkar <ketkara@uber.com>", "Lazaro Clapp <lazaro@uber.com>", "Murali Krishna Ramanathan", "Uber Technologies Inc."]
name = "tree_sitter_wrapper"
description = "Polyglot Piranha is a library for performing structural find and replace with deep cleanup."
version = "0.1.2"
edition = "2021"
include = [
    "build.rs",
    "src/"
]
license-file = "LICENSE"
categories = ["structural find-replace", "find-replace", "structural seearch", "structural search and replace", "tree-sitter"]


[lib]
name = "tree_sitter_wrapper"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0.73"

[dependencies]
tree-sitter = "0.20.6"
serde = "1.0.136"
serde_derive = "1.0.136"
colored = "2.0.0"
itertools= "0.10.3"
log = "0.4.16"
tree-sitter-kotlin = { git = "https://github.com/ketkarameya/tree-sitter-kotlin.git" }
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java.git" }
tree-sitter-swift = { git = "https://github.com/ketkarameya/tree-sitter-swift.git", branch = "add_parser" }
tree-sitter-strings = { git = "https://github.com/ketkarameya/tree-sitter-strings.git" }
derive_builder = "0.11.2"
getset = "0.1.2"
pyo3 = "0.17.1"

[features]
extension-module = ["pyo3/extension-module"]
# default = ["extension-module"]


