[package]
authors = ["Ameya Ketkar <ketkara@uber.com>", "Lazaro Clapp <lazaro@uber.com>"]
name = "dsl"
version = "0.1.2"
edition = "2021"
include = [
    "src/"
]

[lib]
name = "dsl"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0.73"

[dependencies]
tree_sitter_wrapper = { path = "../tree_sitter_wrapper" }
tree-sitter = "0.20.6"
tree-sitter-traversal = "0.1.2"
json = "0.12.4"
toml = "0.5.9"
serde = { version= "1.0.136", default_features= false}
serde_derive = { version= "1.0.136", default_features= false}
colored = "2.0.0"
itertools= "0.10.3"
regex = "1.5.5"
jwalk= "0.6.0"
clap = { version = "3.1.12", features = ["derive"] }
log = "0.4.16"
env_logger = "0.9.0"
tempdir = "0.3"
derive_builder = "0.11.2"
getset = "0.1.2"
